--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,9 +2,9 @@
 	"@metadata": {
 		"authors": []
 	},
-	"gamification-desc": "This is an example extension",
-	"gamification-i18n-welcome": "Welcome to the localization file of the BoilerPlate extension.",
+	"gamification-desc": "Allows for gamification of MediaWiki actions, per design goals of NAVA EVA",
+	"gamification-i18n-welcome": "Welcome to the localization file of the NASA_EVA_Gamification extension.",
 	"gamification-helloworld": "Hello world!",
-	"gamification-helloworld-intro": "Welcome to the \"Hello world\" special page of the BoilerPlate extension.",
+	"gamification-helloworld-intro": "Welcome to the \"Hello world\" special page of the NASA_EVA_Gamification extension.",
 	"helloworld": "Hello world"
 }
