--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -1,16 +1,12 @@
 {
 	"@metadata": {
 		"authors": [
-			"Shirayuki",
-			"Umherirrender",
-			"Amire80",
-			"Fhocutt",
-			"Liuxinyu970226"
+			"UMUC SWEN670 Spring2018"
 		]
 	},
 	"gamification-desc": "{{desc|name=NASA_EVA_Gamification|url=https://github.com/SWEN670NASAEVA/NASA_EVA_Gamification}}",
 	"gamification-i18n-welcome": "Used to greet the user when reading the i18n/??.json file.",
-	"gamification-helloworld": "Page title of the HelloWorld special page.\n{{Identical|Hello World}}",
-	"gamification-helloworld-intro": "Text displayed on the HelloWorld SpecialPage.",
-	"helloworld": "Text of the link to the HelloWorld special page on SpecialPages.\n{{Identical|Hello World}}"
+	"gamification-userprofile": "Page title of the HelloWorld special page.\n{{Identical|Hello World}}",
+	"gamification-userprofile-intro": "Text displayed on the HelloWorld SpecialPage.",
+	"userprofile": "Text of the link to the HelloWorld special page on SpecialPages.\n{{Identical|Hello World}}"
 }
