--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,10 +1,14 @@
 {
 	"@metadata": {
-		"authors": []
+		"authors": "UMUC SWEN670 Spring2018"
 	},
 	"gamification-desc": "Allows for gamification of MediaWiki actions, per design goals of NAVA EVA",
 	"gamification-i18n-welcome": "Welcome to the localization file of the NASA_EVA_Gamification extension.",
-	"gamification-userprofile": "User Profile",
-	"gamification-userprofile-intro": "Welcome to the \"User Profile\" special page of the NASA_EVA_Gamification extension.",
-	"userprofile": "User Profile"
+	"gamification-userprofile": "User Gamification Profile",
+	"gamification-userprofile-intro": "Welcome to the \"User Gamification Profile\" special page of the NASA_EVA_Gamification extension.",
+	"userprofile": "User Gamification Profile",
+	"gamification-rank-1": "Bronze",
+	"gamification-rank-2": "Silver",
+	"gamification-rank-3": "Gold",
+	"gamification-badge-emailverification": "Moon Landing"
 }
