--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -8,7 +8,8 @@
 	"gamification-i18n-welcome": "Used to greet the user when reading the i18n/??.json file.",
 	"gamification-userprofile": "Page title of the UserProfile special page.\n{{Identical|Hello World}}",
 	"gamification-userprofile-intro": "Text displayed on the UserProfile SpecialPage.",
-	"userprofile": "Text of the link to the UserProfile special page on SpecialPages.\n{{Identical|Hello World}}",
+	"usergamiciationprofile": "Text of the link to the UserProfile special page on SpecialPages.\n{{Identical|Hello World}}",
+	"gamification-notloggedin": "Message to display when a user is not logged in and wants to view User Gamification Data",
 	"gamification-rank-1": "Text of the Rank 1 level of gamification badges",
 	"gamification-rank-2": "Text of the Rank 2 level of gamification badges",
 	"gamification-rank-3": "Text of the Rank 3 level of gamification badges",
