--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -6,9 +6,9 @@
 	},
 	"gamification-desc": "{{desc|name=NASA_EVA_Gamification|url=https://github.com/SWEN670NASAEVA/NASA_EVA_Gamification}}",
 	"gamification-i18n-welcome": "Used to greet the user when reading the i18n/??.json file.",
-	"gamification-userprofile": "Page title of the UserProfile special page.\n{{Identical|Hello World}}",
-	"gamification-userprofile-intro": "Text displayed on the UserProfile SpecialPage.",
-	"usergamiciationprofile": "Text of the link to the UserProfile special page on SpecialPages.\n{{Identical|Hello World}}",
+	"gamification-userprofile": "Page title of the UserGamificationProfile special page.\n{{Identical|User Gamification Profile}}",
+	"gamification-userprofile-intro": "Text displayed on the UserGamificationProfile SpecialPage.",
+	"usergamiciationprofile": "Text of the link to the UserGamificationProfile special page on SpecialPages.\n{{Identical|User Gamification Profile}}",
 	"gamification-notloggedin": "Message to display when a user is not logged in and wants to view User Gamification Data",
 	"gamification-rank-1": "Text of the Rank 1 level of gamification badges",
 	"gamification-rank-2": "Text of the Rank 2 level of gamification badges",
