--- a/i18n/en.json
+++ b/i18n/en.json
@@ -8,6 +8,7 @@
 	"gamification-userprofile-intro": "Welcome to the \"User Gamification Profile\" special page of the NASA_EVA_Gamification extension.",
 	"usergamificationprofile": "User Gamification Profile",
 	"gamification-notloggedin": "To view this data, you must first log in",
+	"gamification-congrats": "Congrats!  You have earned the badge: ",
 	"gamification-rank-1": "Astronaut",
 	"gamification-rank-2": "Spacewalker",
 	"gamification-rank-3": "Moonwalker",
