Code Cleanup - localization and apostrophies
I appplied all needed localization using i18n file that was needed for code hard-coded onto specialUserGamificationProfile.php and I alos standardized the apostrophes in use over quotations in the same .php file.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -12,5 +12,10 @@
 	"gamification-rank-1": "Astronaut",
 	"gamification-rank-2": "Spacewalker",
 	"gamification-rank-3": "Moonwalker",
-	"gamification-badge-emailverification": "Spacesuit Verified"
+	"gamification-badge-emailverification": "Spacesuit Verified",
+	"gamification-badge-display-singular": "Badge",
+	"gamification-badge-display-plural": "Badges",
+	"gamification-username": "Username",
+	"gamification-name": "Name",
+	"gamification-name-notpopulated": "[Not Populated]"
 }
